--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="us">
 	<head>
-		<title>ようこそ</title>
+		<title>Startpage</title>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="theme-color" content="#79acf3">
@@ -30,22 +30,88 @@
 				</div>
 				<div class="container">
 					<div class="column">
-						<p>Git</p>
-						<a class="link" href="https://example.com/">Example</a>
-						<a class="link" href="https://example.com/">Example</a>
-						<a class="link" href="https://example.com/">Example</a>
+						<p>Media</p>
+						<a
+                            target="_BLANK"
+                            class="link"
+                            href="https://www.netflix.com/browse"
+                            >Netflix</a
+                        >
+						<a
+                            target="_BLANK"
+                            class="link"
+                            href="https://www.displeyplus.com/en-gb/home"
+                            >Disney +</a
+                        >
+						<a
+                            target="_BLANK"
+                            class="link"
+                            href="https://www.youtube.com/"
+                            >Youtube</a
+                        >
 					</div>
 					<div class="column">
 						<p>Reddit</p>
-						<a target="_BLANK" class="link" href="https://example.com/">Example</a>
-						<a target="_BLANK" class="link" href="https://example.com/">Example</a>
-						<a target="_BLANK" class="link" href="https://example.com/">Example</a>
+						<a
+                            target="_BLANK"
+                            class="link"
+                            href="https://www.reddit.com/r/unixporn"
+                            >UnixPorm</a
+                        >
+						<a
+                            target="_BLANK"
+                            class="link"
+                            href="https://www.reddit.com/r/pcmasterrace"
+                            >PC Master Race</a
+                        >
+						<a
+                            target="_BLANK"
+                            class="link"
+                            href="https://www.reddit.com/r/gaming"
+                            >Gaming</a
+                        >
 					</div>
+                    <div class="column">
+                        <p>Code</p>
+                        <a
+                            target="_BLANK"
+                            class="link"
+                            href="https://github.com/mitchellshahen"
+                            >GitHub</a
+                        >
+                        <a
+                            target="_BLANK"
+                            class="link"
+                            href="https://stackoverflow.com"
+                            >StackOverflow</a
+                        >
+                        <a
+                            target="_BLANK"
+                            class="link"
+                            href="https://vimawesome.com"
+                            >VimAwesome</a
+                        >
+                    </div>
 					<div class="column">
-						<p>Other</p>
-						<a class="link" href="https://example.com/">Example</a>
-						<a class="link" href="https://example.com/">Example</a>
-						<a class="link" href="https://example.com/">Example</a>
+						<p>Productivity</p>
+						<a
+                            target="_BLANK"
+                            class="link"
+                            href="https://mail.google.com/mail/u/1/#inbox"
+                            >Mail</a
+                        >
+						<a
+                            target="_BLANK"
+                            class="link"
+                            href="https://drive.google.com/drive/u/1/my-drive"
+                            >Drive</a
+                        >
+						<a
+                            target="_BLANK"
+                            class="link"
+                            href="https://example.com/"
+                            >Example</a
+                        >
 					</div>
 				</div>
 			</div>
