Fixed Typo and Deleted Fourth Column

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             target="_BLANK"
                             class="link"
                             href="https://www.reddit.com/r/unixporn"
-                            >UnixPorm</a
+                            >UnixPorn</a
                         >
 						<a
                             target="_BLANK"
@@ -92,27 +92,6 @@
                             >VimAwesome</a
                         >
                     </div>
-					<div class="column">
-						<p>Productivity</p>
-						<a
-                            target="_BLANK"
-                            class="link"
-                            href="https://mail.google.com/mail/u/1/#inbox"
-                            >Mail</a
-                        >
-						<a
-                            target="_BLANK"
-                            class="link"
-                            href="https://drive.google.com/drive/u/1/my-drive"
-                            >Drive</a
-                        >
-						<a
-                            target="_BLANK"
-                            class="link"
-                            href="https://example.com/"
-                            >Example</a
-                        >
-					</div>
 				</div>
 			</div>
 
